--- a/libs/remark-css/default.css
+++ b/libs/remark-css/default.css
@@ -8,7 +8,7 @@ a, a > code {
   padding-right: 4em;
   font-size: 90%;
 }
-.remark-code-line-highlighted     { background-color: #c6e3ed; }
+.remark-code-line-highlighted     { background-color: #ffff88; }
 
 .inverse {
   background-color: #272822;
